ingress/prod-grafana.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - grafana.qingmu.io
      secretName: qingmu-certs
  rules:
    - host: grafana.qingmu.io
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - root"
spec:
  tls:
    - hosts:
        - prometheus.qingmu.io
      secretName: qingmu-certs
  rules:
    - host: prometheus.qingmu.io
      http:
        paths:
          - backend:
              serviceName: prometheus-k8s
              servicePort: 9090
